[[changelog-2.0]]
=== 2.0

* Removed specific logging implementation for `SlowQueryListener`
  - net.ttddyy.dsproxy.listener.logging.AbstractSlowQueryLoggingListener
  - net.ttddyy.dsproxy.listener.logging.CommonsSlowQueryListener
  - net.ttddyy.dsproxy.listener.logging.JULSlowQueryListener
  - net.ttddyy.dsproxy.listener.logging.SLF4JSlowQueryListener
  - net.ttddyy.dsproxy.listener.logging.SystemOutSlowQueryListener

  Also, related builder methods on `ProxyDataSourceBuilder` are removed:
  - logSlowQueryByCommons()
  - logSlowQueryBySlf4j()
  - logSlowQueryByJUL()
  - logSlowQueryToSysOut()

  Instead, use following:

  ```java
    ExecutionInfoFormatter formatter = ExecutionInfoFormatter.showAll();
    builder.onSlowQuery(threashold, timeunit, queryInfo -> {
      String log = formatter.format(queryInfo);  // convert to String
      logger.warn(log);  // write log
    });

  ```


* Added `ExecutionInfoFormatter` to replace `QueryLogEntryCreator`
  `OutputParameterFormatterSupport` is added to replace `OutputParameterLogEntryCreator`

* Removed query count logging support using spring `HandlerInterceptor`
  - net.ttddyy.dsproxy.support.AbstractQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.QueryCounterClearHandlerInterceptor
  - net.ttddyy.dsproxy.support.JULQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor

* Removed spring related classes
  - net.ttddyy.dsproxy.support.BeanNameProxyDataSource
  - net.ttddyy.dsproxy.support.DataSourceProxyNativeJdbcExtractor

* Removed AOP alliance related class
  - net.ttddyy.dsproxy.support.ProxyConnectionAdvice

* `ProxyDataSourceListener`
  - `MethodExecutionListener` and `QueryExecutionListener` are combined to `ProxyDataSourceListener`